# ddlp

./: .gitignore  .lintrunner.toml  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt
benchmarks/: benchmark.py
cpp/include/ddlp/: bindings.hpp  communicator.hpp
cpp/include/ddlp/primitives/: col_parallel.hpp  linear_columnwise.hpp  moe.hpp  row_parallel.hpp
cpp/src/: bindings.cpp  communicator.cpp  submodules.cpp
cpp/src/primitives/: col_parallel.cpp  linear_columnwise.cpp  moe.cpp  row_parallel.cpp
python/: pyproject.toml  setup.py
python/ddlp/: __init__.py
python/ddlp/communicator/: __init__.py
python/ddlp/primitives/: __init__.py  heuristics.py  linear_columnwise.py
tests/: conftest.py  test_communicator.py  test_linear_columnwise.py  test_linear_columnwise_mpi.py  test_primitives.py
